Version 0.5
~~~~~~~~~~~
* Post DiFX-2.1

Version 0.4
~~~~~~~~~~~
* transient_daemon and transient_wrapper now look at the VFASTR_CONFIG_FILE
* Version for DiFX-2.1, May 4, 2012

Version 0.3
~~~~~~~~~~~
* Many bug fixes in difxfilterbank, transient daemon and reorderer/regridder
* Version for DiFX-2.0.1, June 10, 2011

Version 0.2
~~~~~~~~~~~
* Updated to allow capture/dumping of kurtosis data in addition to autocorrelation filterbank
* Version for DiFX-2.0.0

Version 0.1
~~~~~~~~~~~
* Initial version of difxfilterbank