@@ -1,6 +1,7 @@
 Version 0.5
 ~~~~~~~~~~~
 * Post DiFX-2.1
+* Switch to PLPLOT from PGPLOT
 
 Version 0.4
 ~~~~~~~~~~~
